--- a/main_simulation.ipynb
+++ b/main_simulation.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "86d8cfc6",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,242 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Cellule 10 : Intelligence par Comparaison de Flux (Segment 5)\n",
+    "import traci\n",
+    "import os\n",
+    "import time\n",
+    "import sys\n",
+    "\n",
+    "# --- CONFIGURATION (Identique) ---\n",
+    "if \"SUMO_HOME\" not in os.environ:\n",
+    "    os.environ[\"SUMO_HOME\"] = r\"C:\\Program Files (x86)\\Eclipse\\Sumo\"\n",
+    "sumo_binary = os.path.join(os.environ[\"SUMO_HOME\"], \"bin\", \"sumo-gui.exe\")\n",
+    "if not os.path.exists(sumo_binary):\n",
+    "    sumo_binary = r\"C:\\Program Files\\Eclipse\\Sumo\\bin\\sumo-gui.exe\"\n",
+    "sys.path.append(os.path.join(os.environ[\"SUMO_HOME\"], \"tools\"))\n",
+    "\n",
+    "config_path = os.path.abspath(os.path.join(\"sumo_configs\", \"config.sumocfg\"))\n",
+    "sumo_cmd = [sumo_binary, \"-c\", config_path, \"--start\"]\n",
+    "\n",
+    "try:\n",
+    "    try:\n",
+    "        traci.close()\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "    traci.start(sumo_cmd)\n",
+    "    TL_ID = \"center\"\n",
+    "    lane_N = \"N2C_0\" \n",
+    "    lane_E = \"E2C_0\" \n",
+    "    \n",
+    "    step = 0\n",
+    "    last_switch_time = 0 \n",
+    "    \n",
+    "    print(\"🧠 SYSTÈME ADAPTATIF : Logique de comparaison activée.\")\n",
+    "\n",
+    "    while step < 1000:\n",
+    "        traci.simulationStep()\n",
+    "        \n",
+    "        # 1. ACQUISITION DES MÉTRIQUES (Segment 4)\n",
+    "        # On regarde combien de voitures attendent sur chaque axe [cite: 73, 75]\n",
+    "        qN = traci.lane.getLastStepHaltingNumber(lane_N)\n",
+    "        qE = traci.lane.getLastStepHaltingNumber(lane_E)\n",
+    "        \n",
+    "        # Phase actuelle : 0 = Vert Nord, 2 = Vert Est [cite: 86]\n",
+    "        current_phase = traci.trafficlight.getPhase(TL_ID)\n",
+    "        \n",
+    "        # 2. LOGIQUE DÉCISIONNELLE AMÉLIORÉE (Segment 5)\n",
+    "        can_switch = (step - last_switch_time > 5) # Sécurité temps minimum\n",
+    "\n",
+    "        if can_switch:\n",
+    "            # CONDITION 1 : Une voie est vide et l'autre a au moins 1 voiture\n",
+    "            if qN > 0 and qE == 0 and current_phase == 2:\n",
+    "                print(f\"t={step} | 🟢 Passage Nord : Est est vide.\")\n",
+    "                traci.trafficlight.setPhase(TL_ID, 0)\n",
+    "                last_switch_time = step\n",
+    "                \n",
+    "            elif qE > 0 and qN == 0 and current_phase == 0:\n",
+    "                print(f\"t={step} | 🟢 Passage Est : Nord est vide.\")\n",
+    "                traci.trafficlight.setPhase(TL_ID, 2)\n",
+    "                last_switch_time = step\n",
+    "\n",
+    "            # CONDITION 2 : Les deux ont du monde -> On compare les files \n",
+    "            elif qN > qE + 2 and current_phase == 2: # +2 pour éviter les changements incessants\n",
+    "                print(f\"t={step} | 📈 Arbitrage : Nord est plus chargé ({qN} vs {qE}).\")\n",
+    "                traci.trafficlight.setPhase(TL_ID, 0)\n",
+    "                last_switch_time = step\n",
+    "                \n",
+    "            elif qE > qN + 2 and current_phase == 0:\n",
+    "                print(f\"t={step} | 📈 Arbitrage : Est est plus chargé ({qE} vs {qN}).\")\n",
+    "                traci.trafficlight.setPhase(TL_ID, 2)\n",
+    "                last_switch_time = step\n",
+    "\n",
+    "        # Monitoring\n",
+    "        sys.stdout.write(f\"\\r Pas {step} | File Nord: {qN} | File Est: {qE} | Phase: {current_phase}   \")\n",
+    "        sys.stdout.flush()\n",
+    "\n",
+    "        step += 1\n",
+    "        time.sleep(0.01)\n",
+    "\n",
+    "    traci.close()\n",
+    "    print(\"\\n🏁 Simulation terminée.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n❌ Erreur : {e}\")\n",
+    "    try: traci.close()\n",
+    "    except: pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7e341eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Scénario mis à jour : 4 ambulances programmées (t=30, 80, 150, 220).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cellule 11 : Mise à jour avec flux d'urgences multiple\n",
+    "import os\n",
+    "\n",
+    "routes_emergency_xml = \"\"\"<routes>\n",
+    "    <vType id=\"car\" accel=\"0.8\" decel=\"4.5\" sigma=\"0.5\" length=\"5\" minGap=\"2.5\" maxSpeed=\"7.0\" guiShape=\"passenger\"/>\n",
+    "    \n",
+    "    <vType id=\"emergency\" accel=\"2.5\" decel=\"5.0\" sigma=\"0.5\" length=\"5\" minGap=\"2.5\" maxSpeed=\"10.0\" \n",
+    "           guiShape=\"emergency\" color=\"red\" vClass=\"emergency\"/>\n",
+    "\n",
+    "    <flow id=\"flow_NS\" type=\"car\" begin=\"0\" end=\"3600\" probability=\"0.1\" from=\"N2C\" to=\"C2S\"/>\n",
+    "    <flow id=\"flow_EW\" type=\"car\" begin=\"0\" end=\"3600\" probability=\"0.1\" from=\"E2C\" to=\"C2W\"/>\n",
+    "\n",
+    "    <vehicle id=\"amb_N1\" type=\"emergency\" depart=\"30\" departLane=\"0\">\n",
+    "        <route edges=\"N2C C2S\"/>\n",
+    "    </vehicle>\n",
+    "\n",
+    "    <vehicle id=\"amb_E1\" type=\"emergency\" depart=\"80\" departLane=\"0\">\n",
+    "        <route edges=\"E2C C2W\"/>\n",
+    "    </vehicle>\n",
+    "\n",
+    "    <vehicle id=\"amb_N2\" type=\"emergency\" depart=\"150\" departLane=\"1\">\n",
+    "        <route edges=\"N2C C2S\"/>\n",
+    "    </vehicle>\n",
+    "\n",
+    "    <vehicle id=\"amb_E2\" type=\"emergency\" depart=\"220\" departLane=\"1\">\n",
+    "        <route edges=\"E2C C2W\"/>\n",
+    "    </vehicle>\n",
+    "</routes>\n",
+    "\"\"\"\n",
+    "\n",
+    "with open(\"sumo_configs/routes.rou.xml\", \"w\") as f:\n",
+    "    f.write(routes_emergency_xml)\n",
+    "\n",
+    "print(\"✅ Scénario mis à jour : 4 ambulances programmées (t=30, 80, 150, 220).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1819e732",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Simulation lancée. Surveillez les véhicules ROUGES dans SUMO.\n",
+      "\n",
+      "❌ Erreur : Traffic light 'center' is not known\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cellule 12 : Exécution avec monitoring d'urgence renforcé\n",
+    "import traci\n",
+    "import os\n",
+    "import time\n",
+    "import sys\n",
+    "\n",
+    "if \"SUMO_HOME\" not in os.environ:\n",
+    "    os.environ[\"SUMO_HOME\"] = r\"C:\\Program Files (x86)\\Eclipse\\Sumo\"\n",
+    "sumo_binary = os.path.join(os.environ[\"SUMO_HOME\"], \"bin\", \"sumo-gui.exe\")\n",
+    "sys.path.append(os.path.join(os.environ[\"SUMO_HOME\"], \"tools\"))\n",
+    "\n",
+    "config_path = os.path.abspath(os.path.join(\"sumo_configs\", \"config.sumocfg\"))\n",
+    "sumo_cmd = [sumo_binary, \"-c\", config_path, \"--start\"]\n",
+    "\n",
+    "try:\n",
+    "    try: traci.close()\n",
+    "    except: pass\n",
+    "    traci.start(sumo_cmd)\n",
+    "    \n",
+    "    TL_ID = \"center\"\n",
+    "    lane_N, lane_E = \"N2C_0\", \"E2C_0\"\n",
+    "    step, last_switch = 0, 0\n",
+    "    \n",
+    "    print(\"🚀 Simulation lancée. Surveillez les véhicules ROUGES dans SUMO.\")\n",
+    "\n",
+    "    while step < 500:\n",
+    "        traci.simulationStep()\n",
+    "        \n",
+    "        # 1. Analyse de la scène (Cahier des charges Segment 4)\n",
+    "        qN = traci.lane.getLastStepHaltingNumber(lane_N)\n",
+    "        qE = traci.lane.getLastStepHaltingNumber(lane_E)\n",
+    "        \n",
+    "        # 2. Identification des classes prioritaires (Cahier des charges Segment 5)\n",
+    "        # On vérifie si une ambulance est présente sur n'importe quelle voie de l'axe\n",
+    "        emergency_N = any(traci.vehicle.getTypeID(v) == \"emergency\" for v in traci.lane.getLastStepVehicleIDs(\"N2C_0\")) or \\\n",
+    "                      any(traci.vehicle.getTypeID(v) == \"emergency\" for v in traci.lane.getLastStepVehicleIDs(\"N2C_1\"))\n",
+    "        \n",
+    "        emergency_E = any(traci.vehicle.getTypeID(v) == \"emergency\" for v in traci.lane.getLastStepVehicleIDs(\"E2C_0\")) or \\\n",
+    "                      any(traci.vehicle.getTypeID(v) == \"emergency\" for v in traci.lane.getLastStepVehicleIDs(\"E2C_1\"))\n",
+    "\n",
+    "        current_phase = traci.trafficlight.getPhase(TL_ID)\n",
+    "        can_switch = (step - last_switch > 10)\n",
+    "\n",
+    "        # --- LOGIQUE DE PRIORITÉ ---\n",
+    "        if emergency_N and current_phase != 0:\n",
+    "            print(f\"\\n[t={step}] !!!!!!!! AMBULANCE NORD DÉTECTÉE -> VERT IMMÉDIAT !!!!!!!!\")\n",
+    "            traci.trafficlight.setPhase(TL_ID, 0)\n",
+    "            last_switch = step\n",
+    "            \n",
+    "        elif emergency_E and current_phase != 2:\n",
+    "            print(f\"\\n[t={step}] !!!!!!!! AMBULANCE EST DÉTECTÉE -> VERT IMMÉDIAT !!!!!!!!\")\n",
+    "            traci.trafficlight.setPhase(TL_ID, 2)\n",
+    "            last_switch = step\n",
+    "            \n",
+    "        elif can_switch:\n",
+    "            # Votre logique de comparaison de flux\n",
+    "            if qN > 0 and qE == 0 and current_phase == 2:\n",
+    "                traci.trafficlight.setPhase(TL_ID, 0); last_switch = step\n",
+    "            elif qE > 0 and qN == 0 and current_phase == 0:\n",
+    "                traci.trafficlight.setPhase(TL_ID, 2); last_switch = step\n",
+    "            elif qN > qE + 2 and current_phase == 2:\n",
+    "                traci.trafficlight.setPhase(TL_ID, 0); last_switch = step\n",
+    "            elif qE > qN + 2 and current_phase == 0:\n",
+    "                traci.trafficlight.setPhase(TL_ID, 2); last_switch = step\n",
+    "\n",
+    "        # Monitoring\n",
+    "        status = \"🚑 URGENCE !\" if (emergency_N or emergency_E) else \"Trafic Normal\"\n",
+    "        sys.stdout.write(f\"\\rPas: {step} | N: {qN} | E: {qE} | État: {status}      \")\n",
+    "        sys.stdout.flush()\n",
+    "\n",
+    "        step += 1\n",
+    "        time.sleep(0.15) # Pause pour bien voir l'ambulance avancer\n",
+    "\n",
+    "    traci.close()\n",
+    "    print(\"\\n🏁 Simulation terminée.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n❌ Erreur : {e}\")\n",
+    "    try: traci.close()\n",
+    "    except: pass"
+   ]
   }
  ],
  "metadata": {
